[project]
name = "mtbl-et"
version = "0.1.0"
description = "MTBL Extract-Transform orchestrator - invokes extract and transform processes"
authors = [{ name = "Taylor \"TP\" Pubins", email = "tpubz@icloud.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.0.0",
]

[project.scripts]
mtbl-et = "mtbl_et.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
]

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
